--- a/interfacepro.html
+++ b/interfacepro.html
@@ -4,46 +4,56 @@ layout: default
 ---
 
 <section id="introduction" class="h-fit w-full py-16 lg:py-24">
-    <div class="m-auto grid items-start grid-cols-3 gap-8 px-5 md:max-w-7xl lg:w-3/4 lg:grid-cols-10">
-        <h2 class="col-start-1 col-end-4 lg:col-start-1 lg:col-end-4 text-2xl font-medium text-left">Introducing InterfacePro: Simplify Custom UI Creation and Secure Data Usage</h2>
-        <p class="col-start-4 col-end-11 lg:col-start-4 lg:col-end-11 text-lg text-secondary">
-            InterfacePro offers a comprehensive AI solution for custom user interface (UI) creation with robust data security. With InterfacePro, streamline UI development by leveraging intuitive tools and seamless backend integration capabilities.
+    <div class="m-auto flex w-full flex-col justify-between space-y-8 px-5 md:max-w-7xl lg:w-3/4 lg:flex-row">
+      <h2 class="text-2xl font-medium">Introducing InterfacePro: Simplify Custom UI Creation and Secure Data Usage</h2>
+      <p class="text-lg text-secondary flex w-full flex-col space-y-8 lg:w-1/2">
+        InterfacePro offers a comprehensive AI solution for custom user interface (UI) creation with robust data security. With InterfacePro, streamline UI development by leveraging intuitive tools and seamless backend integration capabilities.
+      </p>
+    </div>
+</section>
+  
+<section id="ui-design" class="h-fit w-full bg-[#F6F9FE] py-16 lg:py-24">
+    <div class="m-auto flex w-full flex-col justify-between space-y-8 px-5 md:max-w-7xl lg:w-3/4 lg:flex-row">
+      <h2 class="text-2xl font-medium">Effortlessly Design Custom UIs</h2>
+      <div class="text-lg text-secondary flex w-full flex-col space-y-8 lg:w-1/2">
+        <p>
+          InterfacePro simplifies UI design by combining advanced AI language models and Oloren's CodeCraft React package. Here's how it works:
         </p>
+        <ol>
+          <li>CodeCraft React Package: Oloren's CodeCraft React package provides a standardized framework for UI development, establishing the underlying structure.</li>
+          <li>Superprompted LLM Integration: InterfacePro works within the structure, writing React Typescript with GPT-4 code generation. By superprompting GPT-4 with CodeCraft-specific queries, InterfacePro can accurately create the desired UI design that you can further refine. You have full access to the source code.</li>
+        </ol>
+        <p>
+          By utilizing InterfacePro as an AI frontend assistant, designing custom UIs in Orchestrator becomes effortless. You don't need any React expertise or extensive coding knowledge - simply use InterfacePro.
+        </p>
+      </div>
     </div>
 </section>
 
-<section id="design" class="h-fit w-full bg-[#F6F9FE] py-16 lg:py-24">
-    <div class="m-auto grid items-start grid-cols-3 gap-8 px-5 md:max-w-7xl lg:w-3/4 lg:grid-cols-10">
-        <h2 class="col-start-1 col-end-4 lg:col-start-1 lg:col-end-4 text-2xl font-medium text-left">Effortlessly Design Custom UIs</h2>
-        <p class="col-start-4 col-end-11 lg:col-start-4 lg:col-end-11 text-lg text-secondary">
-            InterfacePro simplifies UI design by combining advanced AI language models and Oloren's CodeCraft React package. By utilizing InterfacePro as an AI frontend assistant, designing custom UIs in Orchestrator becomes effortless. You don't need any React expertise or extensive coding knowledge - simply use InterfacePro.
-        </p>
+<section id="orchestrator-integrations" class="h-fit w-full py-16 lg:py-24">
+    <div class="m-auto flex w-full flex-col justify-between space-y-8 px-5 md:max-w-7xl lg:w-3/4 lg:flex-row">
+      <h2 class="text-2xl font-medium">Unlock the Power of Orchestrator Integrations</h2>
+      <p class="text-lg text-secondary flex w-full flex-col space-y-8 lg:w-1/2">
+        InterfacePro’s UI creation process takes advantage of Orchestrator’s capabilities to reduce integration complexity and increase functionality.  
+        By leveraging Orchestrator’s ability to easily make connections to your data sources, codebases, and cloud resources, InterfacePro generated UIs will be well-integrated with your existing workflow. No need to spend time tying together backend resources. 
+        InterfacePro also extends the rest of Orchestrator's functionalities. Export your UIs as APIs for programmatic use in other applications and workflows. Easily share your UIs with collaborators, facilitating intra-team collaboration. InterfacePro can also be combined with Orchestrator's Nexus, allowing you to incorporate any Nexus extension’s capabilities directly within your UIs.
+        With Orchestrator and InterfacePro, your UIs become programmable, shareable, and extensible.
+      </p>
     </div>
 </section>
 
-<section id="integration" class="h-fit w-full py-16 lg:py-24">
-    <div class="m-auto grid items-start grid-cols-3 gap-8 px-5 md:max-w-7xl lg:w-3/4 lg:grid-cols-10">
-        <h2 class="col-start-1 col-end-4 lg:col-start-1 lg:col-end-4 text-2xl font-medium text-left">Unlock the Power of Orchestrator Integrations</h2>
-        <p class="col-start-4 col-end-11 lg:col-start-4 lg:col-end-11 text-lg text-secondary">
-            InterfacePro’s UI creation process takes advantage of Orchestrator’s capabilities to reduce integration complexity and increase functionality. With Orchestrator and InterfacePro, your UIs become programmable, shareable, and extensible.
-        </p>
+<section id="data-security" class="h-fit w-full bg-[#F6F9FE] py-16 lg:py-24">
+    <div class="m-auto flex w-full flex-col justify-between space-y-8 px-5 md:max-w-7xl lg:w-3/4 lg:flex-row">
+      <h2 class="text-2xl font-medium">Data Security at the Core</h2>
+      <p class="text-lg text-secondary flex w-full flex-col space-y-8 lg:w-1/2">
+        We place the utmost importance on data security. Oloren will always offer a self-hosted/on-premises deployment solution, allowing you to maintain complete control over your data and infrastructure. Your data remains confidential and can never be accessed by anyone. 
+    </p>
     </div>
-</section>
-
-<section id="security" class="h-fit w-full bg-[#F6F9FE] py-16 lg:py-24">
-    <div class="m-auto grid items-start grid-cols-3 gap-8 px-5 md:max-w-7xl lg:w-3/4 lg:grid-cols-10">
-        <h2 class="col-start-1 col-end-4 lg:col-start-1 lg:col-end-4 text-2xl font-medium text-left">Data Security at the Core</h2>
-        <p class="col-start-4 col-end-11 lg:col-start-4 lg:col-end-11 text-lg text-secondary">
-            We place the utmost importance on data security. Oloren will always offer a self-hosted/on-premises deployment solution, allowing you to maintain complete control over your data and infrastructure. Your data remains confidential and can never be accessed by anyone. 
-        </p>
-    </div>
-</section>
-
-<section id="elevate" class="h-fit w-full py-16 lg:py-24">
-    <div class="m-auto grid items-start grid-cols-3 gap-8 px-5 md:max-w-7xl lg:w-3/4 lg:grid-cols-10">
-        <h2 class="col-start-1 col-end-4 lg:col-start-1 lg:col-end-4 text-2xl font-medium text-left">Elevate Your UI Development with InterfacePro</h2>
-        <p class="col-start-4 col-end-11 lg:col-start-4 lg:col-end-11 text-lg text-secondary">
-            InterfacePro simplifies UI creation, streamlines backend integration, and ensures data privacy. Whether you're developing enterprise applications, customer portals, or internal dashboards, InterfacePro provides a powerful framework for building custom, super functional UIs that meet your unique needs.
-        </p>
+</section><section id="elevate-interface-pro" class="h-fit w-full py-16 lg:py-24">
+    <div class="m-auto flex w-full flex-col justify-between space-y-8 px-5 md:max-w-7xl lg:w-3/4 lg:flex-row">
+      <h2 class="text-2xl font-medium">Elevate Your UI Development with InterfacePro</h2>
+      <p class="text-lg text-secondary flex w-full flex-col space-y-8 lg:w-1/2">
+        InterfacePro simplifies UI creation, streamlines backend integration, and ensures data privacy. Whether you're developing enterprise applications, customer portals, or internal dashboards, InterfacePro provides a powerful framework for building custom, super functional UIs that meet your unique needs.
+    </p>
     </div>
 </section>
