--- a/orchestrator.html
+++ b/orchestrator.html
@@ -3,18 +3,18 @@ title: Oloren Orchestrator
 layout: default
 ---
 
-<section id="transformation" class="h-fit w-full py-16 lg:py-24">
-  <div class="m-auto flex w-full flex-col justify-between space-y-8 px-5 md:max-w-7xl lg:w-3/4 lg:flex-row">
-    <h2 class="text-2xl font-medium">Organizational Transformation with Oloren Orchestrator</h2>
-    <p class="text-lg text-secondary flex w-full flex-col space-y-8 lg:w-1/2">
-        Oloren Orchestrator transforms organizations. Orchestrator unifies intraorganizational software with interindustry solutions in a single framework. Flexible connectors between components enable the ultimate interoperability, tightly consolidating your organization’s toolkit.     
+<section id="transformation" class="h-fit w-full py-16 lg:py-24 flex flex-col items-center">
+  <div class="m-auto flex flex-col items-center w-full px-5 md:max-w-7xl lg:w-3/4">
+    <h2 class="text-2xl font-medium">Organizational Transformation</h2>
+    <p class="text-lg text-secondary text-center w-full max-w-lg">
+      Oloren Orchestrator transforms organizations. Orchestrator unifies intraorganizational software with interindustry solutions in a single framework. Flexible connectors between components enable the ultimate interoperability, tightly consolidating your organization’s toolkit.
     </p>
   </div>
 </section>
 
 <section id="functionalizing" class="h-fit w-full bg-[#F6F9FE] py-16 lg:py-24">
   <div class="m-auto flex w-full flex-col justify-between space-y-8 px-5 md:max-w-7xl lg:w-3/4 lg:flex-row">
-    <h2 class="text-2xl font-medium">Functionalizing Modularizing Software</h2>
+    <h2 class="text-2xl font-medium">Functionalizing Codebases</h2>
     <p class="text-lg text-secondary flex w-full flex-col space-y-8 lg:w-1/2">
         In Orchestrator, existing codebases can be transformed into reusable graphical nodes with just a few lines of code. Powering this functionality is the Oloren CodeCraft engine, with bindings for React and Python out of the box for rapid adoption. These generated nodes are packaged into modular extensions which can be shared, exported, and reused across your team. 
     </p>
