--- a/interfacepro.html
+++ b/interfacepro.html
@@ -3,18 +3,19 @@ title: InterfacePro
 layout: default
 ---
 
-<section id="introduction" class="h-fit w-full py-16 lg:py-24">
-    <div class="m-auto flex w-full flex-col justify-between space-y-8 px-5 md:max-w-7xl lg:w-3/4 lg:flex-row">
-      <h2 class="text-2xl font-medium">Introducing InterfacePro: Simplify Custom UI Creation and Secure Data Usage</h2>
-      <p class="text-lg text-secondary flex w-full flex-col space-y-8 lg:w-1/2">
+<section id="introduction" class="h-fit w-full py-16 lg:py-24 flex flex-col items-center">
+    <div class="m-auto flex flex-col items-center w-full px-5 md:max-w-7xl lg:w-3/4">
+      <h2 class="text-2xl font-medium">Simplify Custom UI Creation and Secure Data Usage</h2>
+      <p class="text-lg text-secondary text-center w-full max-w-lg">
         InterfacePro offers a comprehensive AI solution for custom user interface (UI) creation with robust data security. With InterfacePro, streamline UI development by leveraging intuitive tools and seamless backend integration capabilities.
       </p>
     </div>
-</section>
+  </section>
+  
   
 <section id="ui-design" class="h-fit w-full bg-[#F6F9FE] py-16 lg:py-24">
     <div class="m-auto flex w-full flex-col justify-between space-y-8 px-5 md:max-w-7xl lg:w-3/4 lg:flex-row">
-      <h2 class="text-2xl font-medium">Effortlessly Design Custom UIs</h2>
+      <h2 class="text-2xl font-medium">Design Custom UIs</h2>
       <div class="text-lg text-secondary flex w-full flex-col space-y-8 lg:w-1/2">
         <p>
           InterfacePro simplifies UI design by combining advanced AI language models and Oloren's CodeCraft React package. Here's how it works:
@@ -32,7 +33,7 @@ layout: default
 
 <section id="orchestrator-integrations" class="h-fit w-full py-16 lg:py-24">
     <div class="m-auto flex w-full flex-col justify-between space-y-8 px-5 md:max-w-7xl lg:w-3/4 lg:flex-row">
-      <h2 class="text-2xl font-medium">Unlock the Power of Orchestrator Integrations</h2>
+      <h2 class="text-2xl font-medium">Superpowered Integrations</h2>
       <p class="text-lg text-secondary flex w-full flex-col space-y-8 lg:w-1/2">
         InterfacePro’s UI creation process takes advantage of Orchestrator’s capabilities to reduce integration complexity and increase functionality.  
         By leveraging Orchestrator’s ability to easily make connections to your data sources, codebases, and cloud resources, InterfacePro generated UIs will be well-integrated with your existing workflow. No need to spend time tying together backend resources. 
@@ -44,14 +45,14 @@ layout: default
 
 <section id="data-security" class="h-fit w-full bg-[#F6F9FE] py-16 lg:py-24">
     <div class="m-auto flex w-full flex-col justify-between space-y-8 px-5 md:max-w-7xl lg:w-3/4 lg:flex-row">
-      <h2 class="text-2xl font-medium">Data Security at the Core</h2>
+      <h2 class="text-2xl font-medium">Data Security</h2>
       <p class="text-lg text-secondary flex w-full flex-col space-y-8 lg:w-1/2">
         We place the utmost importance on data security. Oloren will always offer a self-hosted/on-premises deployment solution, allowing you to maintain complete control over your data and infrastructure. Your data remains confidential and can never be accessed by anyone. 
     </p>
     </div>
 </section><section id="elevate-interface-pro" class="h-fit w-full py-16 lg:py-24">
     <div class="m-auto flex w-full flex-col justify-between space-y-8 px-5 md:max-w-7xl lg:w-3/4 lg:flex-row">
-      <h2 class="text-2xl font-medium">Elevate Your UI Development with InterfacePro</h2>
+      <h2 class="text-2xl font-medium">Elevate UI Development</h2>
       <p class="text-lg text-secondary flex w-full flex-col space-y-8 lg:w-1/2">
         InterfacePro simplifies UI creation, streamlines backend integration, and ensures data privacy. Whether you're developing enterprise applications, customer portals, or internal dashboards, InterfacePro provides a powerful framework for building custom, super functional UIs that meet your unique needs.
     </p>
