--- a/interfacepro.html
+++ b/interfacepro.html
@@ -5,7 +5,7 @@ layout: default
 
 <section id="introduction" class="h-fit w-full py-16 lg:py-24 flex flex-col items-center">
     <div class="m-auto flex flex-col items-center w-full px-5 md:max-w-7xl lg:w-3/4">
-      <h2 class="text-2xl font-medium">Simplify Custom UI Creation and Secure Data Usage</h2>
+      <h2 class="text-2xl font-medium mb-4">Simplify Custom UI Creation and Secure Data Usage</h2>
       <p class="text-lg text-secondary text-center w-full max-w-lg">
         InterfacePro offers a comprehensive AI solution for custom user interface (UI) creation with robust data security. With InterfacePro, streamline UI development by leveraging intuitive tools and seamless backend integration capabilities.
       </p>
@@ -14,9 +14,9 @@ layout: default
   
   
 <section id="ui-design" class="h-fit w-full bg-[#F6F9FE] py-16 lg:py-24">
-    <div class="m-auto flex w-full flex-col justify-between space-y-8 px-5 md:max-w-7xl lg:w-3/4 lg:flex-row">
+    <div class="m-auto flex w-full flex-col justify-between space-y-6 px-5 md:max-w-7xl lg:w-3/4 lg:flex-row">
       <h2 class="text-2xl font-medium">Design Custom UIs</h2>
-      <div class="text-lg text-secondary flex w-full flex-col space-y-8 lg:w-1/2">
+      <div class="text-lg text-secondary flex w-full flex-col space-y-6 lg:w-2/3">
         <p>
           InterfacePro simplifies UI design by combining advanced AI language models and Oloren's CodeCraft React package. Here's how it works:
         </p>
@@ -32,9 +32,9 @@ layout: default
 </section>
 
 <section id="orchestrator-integrations" class="h-fit w-full py-16 lg:py-24">
-    <div class="m-auto flex w-full flex-col justify-between space-y-8 px-5 md:max-w-7xl lg:w-3/4 lg:flex-row">
+    <div class="m-auto flex w-full flex-col justify-between space-y-6 px-5 md:max-w-7xl lg:w-3/4 lg:flex-row">
       <h2 class="text-2xl font-medium">Superpowered Integrations</h2>
-      <p class="text-lg text-secondary flex w-full flex-col space-y-8 lg:w-1/2">
+      <p class="text-lg text-secondary flex w-full flex-col space-y-6 lg:w-2/3">
         InterfacePro’s UI creation process takes advantage of Orchestrator’s capabilities to reduce integration complexity and increase functionality.  
         By leveraging Orchestrator’s ability to easily make connections to your data sources, codebases, and cloud resources, InterfacePro generated UIs will be well-integrated with your existing workflow. No need to spend time tying together backend resources. 
         InterfacePro also extends the rest of Orchestrator's functionalities. Export your UIs as APIs for programmatic use in other applications and workflows. Easily share your UIs with collaborators, facilitating intra-team collaboration. InterfacePro can also be combined with Orchestrator's Nexus, allowing you to incorporate any Nexus extension’s capabilities directly within your UIs.
@@ -44,16 +44,16 @@ layout: default
 </section>
 
 <section id="data-security" class="h-fit w-full bg-[#F6F9FE] py-16 lg:py-24">
-    <div class="m-auto flex w-full flex-col justify-between space-y-8 px-5 md:max-w-7xl lg:w-3/4 lg:flex-row">
+    <div class="m-auto flex w-full flex-col justify-between space-y-6 px-5 md:max-w-7xl lg:w-3/4 lg:flex-row">
       <h2 class="text-2xl font-medium">Data Security</h2>
-      <p class="text-lg text-secondary flex w-full flex-col space-y-8 lg:w-1/2">
+      <p class="text-lg text-secondary flex w-full flex-col space-y-6 lg:w-2/3">
         We place the utmost importance on data security. Oloren will always offer a self-hosted/on-premises deployment solution, allowing you to maintain complete control over your data and infrastructure. Your data remains confidential and can never be accessed by anyone. 
     </p>
     </div>
 </section><section id="elevate-interface-pro" class="h-fit w-full py-16 lg:py-24">
-    <div class="m-auto flex w-full flex-col justify-between space-y-8 px-5 md:max-w-7xl lg:w-3/4 lg:flex-row">
+    <div class="m-auto flex w-full flex-col justify-between space-y-6 px-5 md:max-w-7xl lg:w-3/4 lg:flex-row">
       <h2 class="text-2xl font-medium">Elevate UI Development</h2>
-      <p class="text-lg text-secondary flex w-full flex-col space-y-8 lg:w-1/2">
+      <p class="text-lg text-secondary flex w-full flex-col space-y-6 lg:w-2/3">
         InterfacePro simplifies UI creation, streamlines backend integration, and ensures data privacy. Whether you're developing enterprise applications, customer portals, or internal dashboards, InterfacePro provides a powerful framework for building custom, super functional UIs that meet your unique needs.
     </p>
     </div>
