new version of the copy

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@ layout: default
         </h1>
 
         <h2 class="w-full text-lg text-secondary lg:w-[73%]">
-          Science is a creative act that requires disciplined practice. Creativity is 
+          Building is a creative act that requires disciplined practice. Creativity is 
           <i>hard</i> - discipline is <i>structureable</i>. Oloren unlocks creativity by
-          engineering systems with composibility, stability, and usability in mind, letting 
-          scientists focus on what they do best - science. 
+          engineering systems with composibility, stability, and usability in mind, enabling 
+          products to have far more capabilities beacuse of the deep infratstructure integration.
         </h2>
       </div>
       <div class="space-x-8">
@@ -52,7 +52,7 @@ layout: default
         <div class="flex flex-col space-y-4">
           <h3 class="text-lg font-semibold">CodeCraft</h3>
           <p class="text-lg text-secondary">
-            The magic glue. Oloren CodeCraft converts your existing scientific scripts into an Oloren 
+            The magic glue. Oloren CodeCraft converts your existing monolithic scripts into an Oloren 
             compatible extension, unlocking all the functionality of Oloren's Orchestration system. 
             Functionalize your existing code, compose your script with other nodes, and build complex is 
             applications. 
@@ -62,9 +62,20 @@ layout: default
           <h3 class="text-lg font-semibold">Nexus</h3>
           <p class="text-lg text-secondary">
             Oloren Nexus is Oloren's productivity hub for teams. With Nexus, host workflows on the cloud, integrate 
-            with other extensions via the store, and easily export your team as an API 
-            or intuituve UI template. Regardless of how computationally focused your team is, 
-            Nexus offers a simple way to make workflows more functional. 
+            with other extensions via the store, and use Oloren InterfacePro easily export your team as an API,
+            intuituve UI template, or LLM-powered agent. Regardless of how computationally focused your team is, 
+            Nexus leverages Oloren's IntefacePro make workflows more functional. 
+          </p>
+        </div>
+        <div class="flex flex-col space-y-4">
+          <h3 class="text-lg font-semibold">Third Party Extensions</h3>
+          <p class="text-lg text-secondary">
+            Beyond Oloren's Basics extensions for Google APIs, OpenAI Text Completion APIs, PDF parsing, data manipulation, 
+            JSON capabilities, and more, we also support third-party extension development. 
+            
+            Anyone can develop and offer extensions with Oloren Nexus. Please reach out if you are interested in creating or 
+            codeveloping new extensions for Oloren AI. We're partnered with some domain experts to build 
+            Orchestrator Extensions, and would love to work with more collaborators.
           </p>
         </div>
       </div>
@@ -76,63 +87,29 @@ layout: default
       class="m-auto flex w-full flex-col justify-between space-y-8 px-5 md:max-w-7xl lg:w-3/4 lg:flex-row"
     >
       <div class="flex w-full flex-col space-y-3 lg:w-1/3">
-        <h2 class="text-2xl font-medium">Extensions</h2>
+        <h2 class="text-2xl font-medium">Interface Pro</h2>
       </div>
       <div
         class="flex w-full flex-col space-y-10 child:flex child:flex-col child:space-y-4 lg:w-1/2"
       >
         <div>
-          <h3 class="text-lg font-semibold">Basics</h3>
+          <h3 class="text-lg font-semibold"></h3>
           <p class="text-lg text-secondary">
-            The all-in-one toolkit to get started building with Oloren Orchestrator. Integrating 
-            Google APIs, OpenAI Text Completion APIs, PDF parsing, data manipulation, 
-            JSON capabilities, and more, the Basics extension equips you with essential building 
-            blocks for powerful applications.
+
           </p>
         </div>
 
         <div>
-          <h3 class="text-lg font-semibold">ChemEngine</h3>
+          <h3 class="text-lg font-semibold"></h3>
           <p class="text-lg text-secondary">
-            <!-- ChemEngine is an open-source molecular property prediction library we developed 
-            to deliver high-performance results on open benchmarks. It integrates seamlessly into 
-            teams, provides visualizations for interpretability, offers AutoML for model selection, and
-            Powerpoint integration for sharing visualizations. When used with Oloren Orchestrator, 
-            ChemEngine enables reproducible, interpretable, and high-performance property prediction workflows.
-             -->
-            Coming soon. Check out our open-source library and paper below! 
+
           </p>
-          <div
-          class="flex flex-col space-y-2 child:h-fit child:w-fit child:rounded-xl lg:flex-row lg:items-center lg:space-y-0 lg:space-x-3"
-        >
-          <a
-            class="olorengradient p-px"
-            href="https://chemengine.org"
-            target="_blank"
-          >
-            <div class="outline-button flex flex-row rounded-[11px] bg-[#F6F9FE] px-6 py-3">
-              Visit Site
-              <i data-feather="arrow-up-right" class="pl-2"></i>
-            </div>
-          </a>
-          <a
-            class="olorengradient p-px"
-            href="https://chemrxiv.org/engage/chemrxiv/article-details/6350b9d186473a47d31a8492"
-            target="_blank"
-          >
-            <div class="outline-button flex flex-row rounded-[11px] bg-[#F6F9FE] px-6 py-3">
-              Download Paper
-              <i data-feather="download" class="pl-2"></i>
-            </div>
-          </a>
         </div>
 
         <div>
-          <h3 class="text-lg font-semibold">Third Party</h3>
+          <h3 class="text-lg font-semibold"></h3>
           <div class="mb-4">
             <p class="text-lg text-secondary">
-              Anyone can develop and offer extensions with Oloren Nexus. Please reach out if you are interested in creating or 
-              codeveloping new extensions for Oloren AI.
             </p> 
           </div>
           <div>
