--- a/orchestrator.html
+++ b/orchestrator.html
@@ -7,7 +7,7 @@ layout: default
   <div class="m-auto flex flex-col items-center w-full px-5 md:max-w-7xl lg:w-3/4">
     <h2 class="text-2xl font-medium mb-4">Organizational Transformation</h2>
     <p class="text-lg text-secondary text-center w-full max-w-lg">
-      Oloren Orchestrator transforms organizations. Orchestrator unifies intraorganizational software with interindustry solutions in a single framework. Flexible connectors between components enable the ultimate interoperability, tightly consolidating your organization’s toolkit.
+      Oloren Orchestrator transforms organizations. Orchestrator unifies intraorganizational software with interindustry solutions in a single framework. Flexible connectors between components enable the ultimate interoperability.
     </p>
   </div>
 </section>
@@ -15,7 +15,7 @@ layout: default
 <section id="functionalizing" class="h-fit w-full bg-[#F6F9FE] py-16 lg:py-24">
   <div class="m-auto flex w-full flex-col justify-between space-y-6 px-5 md:max-w-7xl lg:w-3/4 lg:flex-row">
     <h2 class="text-2xl font-medium">Functionalizing Codebases</h2>
-    <p class="text-lg text-secondary flex w-full flex-col space-y-6 lg:w-2/3">
+    <p class="text-lg text-secondary flex w-full flex-col space-y-6 lg:w-7/12">
         In Orchestrator, existing codebases can be transformed into reusable graphical nodes with just a few lines of code. Powering this functionality is the Oloren CodeCraft engine, with bindings for React and Python out of the box for rapid adoption. These generated nodes are packaged into modular extensions which can be shared, exported, and reused across your team. 
     </p>
   </div>
@@ -24,7 +24,7 @@ layout: default
 <section id="integration" class="h-fit w-full py-16 lg:py-24">
   <div class="m-auto flex w-full flex-col justify-between space-y-6 px-5 md:max-w-7xl lg:w-3/4 lg:flex-row">
     <h2 class="text-2xl font-medium">Instant Integration</h2>
-    <p class="text-lg text-secondary flex w-full flex-col space-y-6 lg:w-2/3">
+    <p class="text-lg text-secondary flex w-full flex-col space-y-6 lg:w-7/12">
         By leveraging code containerization and the serverless cloud, Orchestrator enables instant integration of custom-built and off-the-shelf software. Each solution is encapsulated within a container as an extension, creating a cohesive extension ecosystem. An organization can load a single extension or an entire package of extensions from the Oloren Store to unlock instant functionality. This means accessing chemoinformatic capabilities with a single click via the Oloren Chemoinformatics Package or taking data scraping and wrangling to another level with the Oloren Data Science Package.
     </p>
   </div>
@@ -33,7 +33,7 @@ layout: default
 <section id="connect" class="h-fit w-full bg-[#F6F9FE] py-16 lg:py-24">
   <div class="m-auto flex w-full flex-col justify-between space-y-6 px-5 md:max-w-7xl lg:w-3/4 lg:flex-row">
     <h2 class="text-2xl font-medium">Connect</h2>
-    <p class="text-lg text-secondary flex w-full flex-col space-y-6 lg:w-2/3">
+    <p class="text-lg text-secondary flex w-full flex-col space-y-6 lg:w-7/12">
         Orchestrator’s Graph Editor allows users to connect and integrate software via an intuitive graphical interface which makes building complex workflows and understanding data interchanges simple. Orchestrator meets teams where they’re at, with integrations across cloud infrastructure, productivity suites, databases, and more. These connections streamline communication within an organization and let teams keep using the tools and platforms they know and love. 
     </p>
   </div>
@@ -42,8 +42,8 @@ layout: default
 <section id="exports" class="h-fit w-full py-16 lg:py-24">
   <div class="m-auto flex w-full flex-col justify-between space-y-6 px-5 md:max-w-7xl lg:w-3/4 lg:flex-row">
     <h2 class="text-2xl font-medium">Exports</h2>
-    <p class="text-lg text-secondary flex w-full flex-col space-y-6 lg:w-2/3">
-        Orchestrator connects teams. With Oloren’s AppNexus, Orchestrator workflows are accessible and shareable with no extra effort. Workflows built with Orchestrator can be exported as shareable graphical user interfaces (GUIs) or application program interfaces (APIs), enabling Orchestrator workflows to integrate into more complex workflows and applications.
+    <p class="text-lg text-secondary flex w-full flex-col space-y-6 lg:w-7/12">
+        Orchestrator connects teams. With Oloren’s Nexus, Orchestrator workflows are accessible and shareable with no extra effort. Workflows built with Orchestrator can be exported with Interface Pro as shareable graphical user interfaces (GUIs), application program interfaces (APIs), and LLM-powered agent, enabling Orchestrator workflows to seamlessly integrate into more complex workflows and applications.
     </p>
   </div>
 </section>
@@ -51,10 +51,11 @@ layout: default
 <section id="examples" class="h-fit w-full bg-[#F6F9FE] py-16 lg:py-24">
   <div class="m-auto flex w-full flex-col justify-between space-y-6 px-5 md:max-w-7xl lg:w-3/4 lg:flex-row">
     <h2 class="text-2xl font-medium">Examples</h2>
-    <ul class="text-lg text-secondary flex w-full flex-col space-y-6 lg:w-2/3"> 
+    <ul class="text-lg text-secondary flex w-full flex-col space-y-6 lg:w-7/12"> 
        <li>ML pipelines previously constructed by disparate scripts can be customized and deployed in a single workflow</li>
         <li>Automated PDF scraping with humans in the loop for review</li>
         <li>Training molecular property prediction models and running inference on molecules drawn in Ketcher</li>
+        <li>Automatic PDF generation and interactive visualization interface</li>
         <li>Web scraping search results, processing with GPT4, and exporting into Google Sheets. And more!</li>   
     </ul>
   </div>
