--- a/interfacepro.html
+++ b/interfacepro.html
@@ -5,9 +5,9 @@ layout: default
 
 <section id="introduction" class="h-fit w-full py-16 lg:py-24 flex flex-col items-center">
     <div class="m-auto flex flex-col items-center w-full px-5 md:max-w-7xl lg:w-3/4">
-      <h2 class="text-2xl font-medium mb-4">Simplify Custom UI Creation and Secure Data Usage</h2>
+      <h2 class="text-2xl font-medium mb-4">Effortless and Secure Custom UI Creation</h2>
       <p class="text-lg text-secondary text-center w-full max-w-lg">
-        InterfacePro offers a comprehensive AI solution for custom user interface (UI) creation with robust data security. With InterfacePro, streamline UI development by leveraging intuitive tools and seamless backend integration capabilities.
+        InterfacePro offers a comprehensive AI solution for custom user interface (UI) creation with robust data security. With InterfacePro, streamline UI development by leveraging our intuitive frontend tools and Orchestrator integration capabilities.
       </p>
     </div>
   </section>
@@ -22,10 +22,11 @@ layout: default
         </p>
         <ol>
           <li>CodeCraft React Package: Oloren's CodeCraft React package provides a standardized framework for UI development, establishing the underlying structure.</li>
-          <li>Superprompted LLM Integration: InterfacePro works within the structure, writing React Typescript with GPT-4 code generation. By superprompting GPT-4 with CodeCraft-specific queries, InterfacePro can accurately create the desired UI design that you can further refine. You have full access to the source code.</li>
+          <li>Graph Editor Workflow Development: Graph Editor helps streamline the process of developing complicated, multi-functional workflows with an intuitive interface.</li>
+          <li>Superprompted LLM Integration: InterfacePro works within the structure, writing React Typescript with GPT-4 code generation. By superprompting GPT-4 with CodeCraft-specific queries and your desired workflow, InterfacePro can accurately create the desired UI design that you can further refine. You have full access to the source code.</li>
         </ol>
         <p>
-          By utilizing InterfacePro as an AI frontend assistant, designing custom UIs in Orchestrator becomes effortless. You don't need any React expertise or extensive coding knowledge - simply use InterfacePro.
+          By utilizing InterfacePro as an AI frontend assistant, designing custom UIs in Orchestrator becomes effortless. No longer are you constrained to PDFs or powerpoints. You don't need any React expertise or extensive coding knowledge - simply use InterfacePro.
         </p>
       </div>
     </div>
@@ -38,7 +39,7 @@ layout: default
         InterfacePro’s UI creation process takes advantage of Orchestrator’s capabilities to reduce integration complexity and increase functionality.  
         By leveraging Orchestrator’s ability to easily make connections to your data sources, codebases, and cloud resources, InterfacePro generated UIs will be well-integrated with your existing workflow. No need to spend time tying together backend resources. 
         InterfacePro also extends the rest of Orchestrator's functionalities. Export your UIs as APIs for programmatic use in other applications and workflows. Easily share your UIs with collaborators, facilitating intra-team collaboration. InterfacePro can also be combined with Orchestrator's Nexus, allowing you to incorporate any Nexus extension’s capabilities directly within your UIs.
-        With Orchestrator and InterfacePro, your UIs become programmable, shareable, and extensible.
+        With Orchestrator and InterfacePro, your UIs become programmable, shareable, and extensible products.
       </p>
     </div>
 </section>
