adding back in interface pro

--- a/index.html
+++ b/index.html
@@ -82,30 +82,28 @@ layout: default
     </div>
   </section>
 
-  <section id="extensions" class="h-fit w-full bg-white py-16 lg:py-24">
+  <section id="home-interface-pro" class="h-fit w-full bg-white py-16 lg:py-24">
     <div
       class="m-auto flex w-full flex-col justify-between space-y-8 px-5 md:max-w-7xl lg:w-3/4 lg:flex-row"
     >
       <div class="flex w-full flex-col space-y-3 lg:w-1/3">
         <h2 class="text-2xl font-medium">Interface Pro</h2>
       </div>
-      <div
-        class="flex w-full flex-col space-y-10 child:flex child:flex-col child:space-y-4 lg:w-1/2"
-      >
+      <div class="flex w-full flex-col space-y-10 child:flex child:flex-col child:space-y-4 lg:w-1/2">
         <div>
-          <h3 class="text-lg font-semibold"></h3>
+          <h3 class="text-lg font-semibold">Effortless UI Creation</h3>
           <p class="text-lg text-secondary">
-
+            Design and create custom user interfaces (UIs) effortlessly using our AI-powered frontend tools and Orchestrator integration. No React expertise or extensive coding knowledge required.
           </p>
         </div>
-
+  
         <div>
-          <h3 class="text-lg font-semibold"></h3>
+          <h3 class="text-lg font-semibold">Secure and Integrated</h3>
           <p class="text-lg text-secondary">
-
+            Ensure data security with our self-hosted/on-premises deployment option. Interface Pro seamlessly integrates with Orchestrator, providing superpowered UIs that are well-integrated with your existing workflow.
           </p>
         </div>
-
+  
         <div>
           <h3 class="text-lg font-semibold"></h3>
           <div class="mb-4">
@@ -123,5 +121,4 @@ layout: default
       </div>
     </div>
   </section>
-
 </div>
